src/objects/Campaign_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Across_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Across Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Process__c</fullName>
        <description>Comma Separated Process Name</description>
        <label>Base Process</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Product_Line__c</fullName>
        <label>Base Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Product_Name__c</fullName>
        <description>Comma separated Base Product Name</description>
        <label>Base Product Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Rules</relationshipLabel>
        <relationshipName>Campaign_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Product_Name__c</fullName>
        <description>Comma separated Child Product Name</description>
        <label>Child Product Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_To_Look__c</fullName>
        <label>Days To Look</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member Since</fullName>
                </value>
                <value>
                    <fullName>Lead/Contact Modified</fullName>
                </value>
                <value>
                    <fullName>Last Sales Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Exit__c</fullName>
        <label>Entry/Exit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Exit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_To_Evaluate__c</fullName>
        <label>Field To Evaluate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Order__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Id__c</fullName>
        <label>Rule Id</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Rule</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Campaign Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Rules</pluralLabel>
    <recordTypes>
        <fullName>Days_Rule</fullName>
        <active>true</active>
        <label>Days Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Rule</fullName>
        <active>true</active>
        <label>General Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Rule</fullName>
        <active>true</active>
        <label>Product Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Status_Rule</fullName>
        <active>true</active>
        <label>Status Rule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>